[project]
name = "decision_tornado"
version = "0.1.0"
description = "Decision Analysis Library for Python, allowing for the creation of decision funnel diagrams and tornado diagrams."
authors = [{ name = "Dennis Tai", email = "swotai@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mkdocs", "mkdocstrings"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
